# fractal_autoresearch

./: .gitignore  README.md  analyze.py  findings.md  main.py  prepare.py  program.md  pyproject.toml  scenes.md  train.py  train_scale.py  train_sweep.py
paper/: main.tex  references.bib
plots/: attn_graph_data.npz  connectivity_data.npz  critical_lr_data.npz  rmt_data.npz
video/: export_data.py  render_all.py  scenes.py  voiceover_pipeline.py  voiceover_script.md
